[gd_scene load_steps=22 format=3 uid="uid://dtk4gqhw1f1eq"]

[ext_resource type="Texture2D" uid="uid://cgh7us1d8yo5u" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="1_kau31"]
[ext_resource type="Script" path="res://Scripts/Knight/Troops/knight_warrior_blue.gd" id="1_x50d5"]
[ext_resource type="Texture2D" uid="uid://cdturbcgk57ww" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Dead/Dead.png" id="2_qtv2w"]
[ext_resource type="Texture2D" uid="uid://bok8p2ooe82k5" path="res://icon.svg" id="2_v2f2g"]
[ext_resource type="Texture2D" uid="uid://dkd2hc6588f4e" path="res://Assets/Tiny Swords (Update 010)/GUI/ArmySelected.png" id="5_6cbsn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a13i7"]
radius = 22.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xgg0k"]
radius = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_266c0"]
radius = 47.0106

[sub_resource type="Animation" id="Animation_8258t"]
resource_name = "Detected"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectedArea/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 250.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wytay"]
_data = {
"Detected": SubResource("Animation_8258t")
}

[sub_resource type="Animation" id="Animation_grx7g"]
resource_name = "AttackDown"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_1h27w"]
resource_name = "AttackLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KnightSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_457mv"]
resource_name = "AttackRight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KnightSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m37r0"]
resource_name = "AttackUp"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_0274v"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_hmaho"]
resource_name = "RunLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KnightSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3fllh"]
resource_name = "RunRight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KnightSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_al5s6"]
_data = {
"AttackDown": SubResource("Animation_grx7g"),
"AttackLeft": SubResource("Animation_1h27w"),
"AttackRight": SubResource("Animation_457mv"),
"AttackUp": SubResource("Animation_m37r0"),
"Idle": SubResource("Animation_0274v"),
"RunLeft": SubResource("Animation_hmaho"),
"RunRight": SubResource("Animation_3fllh")
}

[sub_resource type="Animation" id="Animation_6g3nv"]
resource_name = "dead"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExtraSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExtraSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 13]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_kld1o"]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KnightSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843), Color(1, 1, 1, 1), Color(1, 1, 1, 0.607843), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a1x6q"]
_data = {
"dead": SubResource("Animation_6g3nv"),
"take_damage": SubResource("Animation_kld1o")
}

[node name="KnightWarriorBlue" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 0
script = ExtResource("1_x50d5")

[node name="SelectedTouch" type="TouchScreenButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-18, -45)
scale = Vector2(0.398437, 0.632813)
texture_normal = ExtResource("2_v2f2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_a13i7")

[node name="DetectedArea" type="Area2D" parent="."]
y_sort_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectedArea"]
shape = SubResource("CircleShape2D_xgg0k")

[node name="KnightArea" type="Area2D" parent="." groups=["Knight", "Soldier"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnightArea"]
shape = SubResource("CircleShape2D_266c0")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="ToolAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wytay")
}
autoplay = "Detected"

[node name="VisualAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_al5s6")
}

[node name="ExtraAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a1x6q")
}

[node name="KnightSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_kau31")
flip_h = true
hframes = 6
vframes = 8
frame = 3

[node name="ExtraSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_qtv2w")
hframes = 7
vframes = 2

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="ArmySelected" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0.486275, 0.486275, 0.6)
z_index = 1
position = Vector2(1, -68)
scale = Vector2(2, 2)
texture = ExtResource("5_6cbsn")

[connection signal="pressed" from="SelectedTouch" to="." method="_on_selected_touch_pressed"]
[connection signal="area_entered" from="DetectedArea" to="." method="_on_detected_area_area_entered"]
[connection signal="area_entered" from="KnightArea" to="." method="_on_knight_area_area_entered"]
[connection signal="area_exited" from="KnightArea" to="." method="_on_knight_area_area_exited"]
[connection signal="mouse_entered" from="KnightArea" to="." method="_on_knight_area_mouse_entered"]
[connection signal="mouse_exited" from="KnightArea" to="." method="_on_knight_area_mouse_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="animation_finished" from="ToolAnimation" to="." method="_on_tool_animation_animation_finished"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
